<resources>
    <string name="app_name">SmartExam</string>
    <string name="default_notification_channel" translatable="false">Smart Exam Push Notification</string>
    <string name="default_notification_channel_id" translatable="false">hoang.nguyenminh.smartexam</string>
    <string name="default_notification_channel_description" translatable="false">Smart Exam Notification Channel</string>

    <!-- Common message -->
    <string name="message_unhandled_error">Oops! Something went wrong. Please try again.</string>
    <string name="message_network_error">Cannot connect to server. Please try again later.</string>

    <!-- Authentication -->
    <string name="lbl_login">Login</string>
    <string name="lbl_register">Register</string>
    <string name="lbl_username">Username</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_re_enter_password">Re-enter Password</string>
    <string name="hint_username">Enter your username</string>
    <string name="hint_password">Enter your password</string>
    <string name="hint_re_enter_password">Re-enter your password</string>
    <string name="lbl_create_account">Don\'t have an account? Create now.</string>
    <string name="lbl_already_have_account">Already have an account? Login now.</string>
    <string name="confirm_exit_app">Press again to exit</string>
    <string name="lbl_logout">Logout</string>
    <string name="message_confirm_logout">Do you confirm to logout?</string>
    <string name="message_confirm_update_user_info">Do you confirm to update user info?</string>
    <string name="message_update_user_info_successfully">Update user info successfully?</string>

    <!-- Main -->
    <string name="label_menu_home">Home</string>
    <string name="label_menu_exam">Exam</string>
    <string name="label_menu_setting">Setting</string>
    <string name="label_menu_profile">Profile</string>

    <!-- Home -->
    <string name="format_total_exam_count">Total Exams: %d</string>
    <string name="format_completed_exam_count">Completed Exams: %d</string>
    <string name="format_todo_exam_count">Todo Exams: %d</string>
    <string name="dashboard_dot">&#x2022;&#160;&#160;</string>

    <!-- Exam Execution -->
    <string name="lbl_exam_execution">Exam Execution</string>
    <string name="lbl_exam_capture">Exam Capture</string>
    <string name="lbl_exam_list">Exam List</string>
    <string name="lbl_exam_history">Exam History</string>
    <string name="lbl_exam_detail">Exam Detail</string>
    <string name="lbl_exam_image">Exam Image</string>
    <string name="lbl_exam_submit">Submit Exam</string>
    <string name="description_action_capture_image">Capture exam image</string>
    <string name="description_action_send_image">Send exam image</string>
    <string name="format_question_content">Question %d: %s</string>
    <string name="format_choice_content">%1$s. %2$s</string>
    <string name="lbl_exam_timer">Exam timer</string>
    <string name="lbl_enter_exam">Take the exam</string>
    <string name="lbl_capture_exam">Capture Exam</string>
    <string name="lbl_open_camera">Open camera</string>
    <string name="lbl_choose_from_library">Choose from library</string>
    <string name="format_question_index">Question %d</string>
    <string name="message_confirm_submit_exam">Do you confirm to submit exam?</string>
    <string name="message_empty_questions">This exam doesn\'t have any questions. Please select another.</string>
    <string name="message_submit_exam_successfully">Submit exam successfully.</string>
    <string name="message_submit_exam_image_successfully">Submit exam image successfully.</string>
    <string name="chart">Chart</string>
    <string name="label_todo_exams">Todo Exams</string>
    <string name="label_total_exams">Total Exams</string>
    <string name="label_completed_exams">Completed Exams</string>
    <string name="format_exam_time_limit">%d minutes</string>

    <!-- Profile -->
    <string name="lbl_first_name">First Name</string>
    <string name="lbl_last_name">Last Name</string>
    <string name="lbl_address">Address</string>
    <string name="lbl_class">Class</string>
    <string name="lbl_gender">Gender</string>
    <string name="lbl_date_of_birth">Date of birth</string>
    <string name="lbl_phone_number">Phone Number</string>
    <string name="lbl_male">Male</string>
    <string name="lbl_female">Female</string>
    <string name="title_date_picker">Date picker</string>
    <string name="message_invalid_email">Please enter a valid email address</string>
    <string name="message_invalid_password">Password must contains at least 6 characters</string>
</resources>