<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="hoang.nguyenminh.smartexam.ui.authentication.register.RegisterViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/space_medium">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_header"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/ic_faze"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.4" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_username"
            app:boxCornerRadiusTopEnd="@dimen/radius_medium"
            app:boxCornerRadiusTopStart="@dimen/space_medium"
            app:layout_constraintTop_toBottomOf="@id/img_header"
            tools:text="@tools:sample/full_names">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/AppTextAppearance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_username"
                android:inputType="text"
                android:lines="1"
                android:minHeight="@dimen/common_edittext_height"
                android:text="@{vm.userName}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_large"
            android:text="@string/lbl_password"
            app:boxCornerRadiusTopEnd="@dimen/radius_medium"
            app:boxCornerRadiusTopStart="@dimen/space_medium"
            app:layout_constraintTop_toBottomOf="@id/edt_username"
            app:passwordToggleEnabled="true"
            tools:text="@tools:sample/full_names">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/AppTextAppearance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:lines="1"
                android:minHeight="@dimen/common_edittext_height"
                android:text="@{vm.password}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_re_enter_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_large"
            android:text="@string/lbl_re_enter_password"
            app:boxCornerRadiusTopEnd="@dimen/radius_medium"
            app:boxCornerRadiusTopStart="@dimen/space_medium"
            app:layout_constraintTop_toBottomOf="@id/edt_password"
            app:passwordToggleEnabled="true"
            tools:text="@tools:sample/full_names">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/AppTextAppearance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_re_enter_password"
                android:inputType="textPassword"
                android:lines="1"
                android:minHeight="@dimen/common_edittext_height"
                android:text="@{vm.reEnterPassword}" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_register"
            style="@style/AppWidget.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_large"
            android:text="@string/lbl_register"
            app:layout_constraintTop_toBottomOf="@id/edt_re_enter_password"
            app:viewCompatEnabled="@{!vm.userName.empty &amp;&amp; !vm.password.empty &amp;&amp; !vm.reEnterPassword.empty}" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lbl_already_have_account"
            style="@style/Clickable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_medium"
            android:text="@string/lbl_already_have_account"
            android:textAppearance="@style/AppTextAppearance.Content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_register"
            app:layout_constraintVertical_bias="0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>