<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="hoang.nguyenminh.smartexam.ui.authentication.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/view_top"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="?colorPrimary"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view_curve"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/bg_curve"
            app:layout_constraintTop_toBottomOf="@id/view_top" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_header"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:padding="@dimen/space_large"
            android:src="@drawable/ic_faze"
            app:layout_constraintBottom_toBottomOf="@id/view_curve"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/view_top" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_username"
            style="@style/AppWidget.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space_large"
            android:layout_marginTop="@dimen/space_medium"
            android:hint="@string/lbl_username"
            app:layout_constraintTop_toBottomOf="@id/img_header"
            tools:text="@tools:sample/full_names">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/AppTextAppearance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_username"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:minHeight="@dimen/common_edittext_height"
                android:text="@={vm.email}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_password"
            style="@style/AppWidget.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space_large"
            android:layout_marginTop="@dimen/space_large"
            android:hint="@string/lbl_password"
            app:layout_constraintTop_toBottomOf="@id/edt_username"
            app:passwordToggleEnabled="true"
            tools:text="@tools:sample/full_names">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/AppTextAppearance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:lines="1"
                android:minHeight="@dimen/common_edittext_height"
                android:text="@={vm.password}" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            style="@style/AppWidget.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space_large"
            android:layout_marginTop="@dimen/space_large"
            android:text="@string/lbl_login"
            app:layout_constraintTop_toBottomOf="@id/edt_password"
            app:viewCompatEnabled="@{vm.enabled}" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lbl_create_account"
            style="@style/Clickable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_medium"
            android:text="@string/lbl_create_account"
            android:textAppearance="@style/AppTextAppearance.Content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_login"
            app:layout_constraintVertical_bias="0"
            app:viewCompatEnabled="@{vm.enabled}" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>